--- a/index.html
+++ b/index.html
@@ -73,6 +73,160 @@ GROUP BY u.name
 ORDER BY orders_count DESC;</code></pre>
   </section>
 
+  <!-- Пример теории -->
+  <section id="theory-example" class="container">
+    <h2>Как выглядит теория на практике</h2>
+    <img src="landing2.png" alt="Пример теории с запросом и результатом" class="example-screenshot">
+    <p>Для каждого примера мы показываем не только условие, но и готовый SQL-запрос с результатом.</p>
+  </section>
+
+  <!-- Пример задачи -->
+  <section id="example-task" class="container">
+    <h2>Как устроена каждая задача</h2>
+    <img src="landing1.png" alt="Пример задачи с условием и решением" class="task-screenshot">
+    <p>Не нужно угадывать — у каждой задачи есть условие, схема БД, подсказка, ответ и код решения.</p>
+  </section>
+
+  <!-- Программа курса -->
+  <section id="program" class="container">
+    <h2>Программа курса</h2>
+    <ul>
+      <li>Введение и основы реляционных БД</li>
+      <li>Литеры и функции</li>
+      <li>JOIN, подзапросы, CTE</li>
+      <li>Оконные функции</li>
+      <li>Создание и изменение таблиц, индексы, внешние ключи</li>
+      <li>Импорт/экспорт в DBeaver</li>
+    </ul>
+  </section>
+
+  <!-- О преподавателе -->
+  <section id="instructor" class="container">
+    <h2>Преподаватель</h2>
+    <div class="instructor">
+      <img src="avatar.png" alt="Кузьмин Дмитрий" class="avatar">
+      <p><strong>Дмитрий Кузьмин</strong><br>Data Engineer с реальным опытом продакшен-проектов и подготовки к собеседованиям. Проводит живые разборы и помогает на каждом этапе.</p>
+    </div>
+  </section>
+
+  <!-- Footer / CTA -->
+  <footer class="container footer">
+    <a href="https://stepik.org" class="btn-cta">Пойти на курс</a>
+    <p>Сертификат Stepik. Гарантия качества.</p>
+  </footer>
+
+  <!-- SVG-иконки (спрайт) -->
+  <svg style="display:none;">
+    <symbol id="icon-tasks" viewBox="0 0 24 24"></symbol>
+    <symbol id="icon-project" viewBox="0 0 24 24"></symbol>
+    <symbol id="icon-db" viewBox="0 0 24 24"></symbol>
+  </svg>
+</body>
+</html>
+
+/* styles.css */
+* { margin: 0; padding: 0; box-sizing: border-box; }
+body { font-family: Arial, sans-serif; line-height: 1.6; color: #333; }
+.container { width: 90%; max-width: 1200px; margin: auto; padding: 2rem 0; }
+.hero { background: linear-gradient(135deg, #4b6cb7, #182848); color: #fff; padding: 4rem 0; text-align: center; }
+.hero h1 { font-size: 2.5rem; margin-bottom: 1rem; }
+.hero .subheading { font-size: 1.2rem; }
+.icons-list { list-style: none; display: flex; justify-content: space-between; }
+.icons-list li { flex: 1; text-align: center; padding: 1rem; }
+.icons-list .icon { display: block; font-size: 2rem; margin-bottom: 0.5rem; }
+.features { display: flex; justify-content: space-between; }
+.feature-item { flex: 1; text-align: center; padding: 1rem; }
+.cards { display: flex; gap: 1rem; }
+.card { flex: 1; border: 1px solid #ddd; padding: 1.5rem; border-radius: 8px; text-align: center; }
+#skills ul, #program ul { list-style: disc inside; margin-top: 1rem; }
+#skills pre, #example-task pre { background: #f4f4f4; padding: 1rem; border-radius: 4px; overflow-x: auto; }
+.benefits-list { display: flex; flex-wrap: wrap; gap: 1rem; }
+.benefit { flex: 1 1 calc(33% - 1rem); display: flex; align-items: center; padding: 1rem; border: 1px solid #ddd; border-radius: 8px; }
+.benefit .icon { font-size: 2rem; margin-right: 0.5rem; }
+.example-screenshot, .task-screenshot, .avatar { width: 100%; border-radius: 8px; margin: 1rem 0; }
+#instructor .instructor { display: flex; align-items: center; gap: 1rem; }
+#instructor .avatar { width: 150px; border-radius: 50%; }
+.btn-cta { display: inline-block; background: #4b6cb7; color: #fff; padding: 1rem 2rem; text-decoration: none; border-radius: 4px; }
+.footer { text-align: center; padding: 2rem 0; }
+@media (max-width: 768px) {
+  .icons-list, .features, .cards, .benefits-list, #instructor .instructor { flex-direction: column; }
+  .icon, .feature-icon { font-size: 1.5rem; }
+}
+<!-- index.html -->
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>SQL для инженеров и аналитиков с нуля</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+  <!-- Hero-секция -->
+  <header class="hero">
+    <div class="container">
+      <h1>Застряли на SQL-задачах без практики?</h1>
+      <p class="subheading">Практический курс с поддержкой, 280+ задач, живые разборы</p>
+    </div>
+  </header>
+
+  <!-- Почему это важно -->
+  <section id="pain" class="container">
+    <h2>Почему это важно</h2>
+    <ul class="icons-list">
+      <li><span class="icon">🐢</span> Медленные и неэффективные запросы</li>
+      <li><span class="icon">⚠️</span> Ошибки в JOIN-ах и подзапросах</li>
+      <li><span class="icon">🚫</span> Невозможность пройти собеседование на junior-позицию</li>
+    </ul>
+  </section>
+
+  <!-- Наше решение -->
+  <section id="solution" class="container">
+    <h2>Наше решение</h2>
+    <div class="features">
+      <div class="feature-item">
+        <svg class="feature-icon"><use href="#icon-tasks"/></svg>
+        <p>280+ практических задач и тестов</p>
+      </div>
+      <div class="feature-item">
+        <svg class="feature-icon"><use href="#icon-project"/></svg>
+        <p>Проектная работа и живая поддержка в Telegram</p>
+      </div>
+      <div class="feature-item">
+        <svg class="feature-icon"><use href="#icon-db"/></svg>
+        <p>Специально созданные базы данных</p>
+      </div>
+    </div>
+  </section>
+
+  <!-- Для кого -->
+  <section id="audience" class="container">
+    <h2>Для кого этот курс</h2>
+    <div class="cards">
+      <div class="card"><h3>Новички в аналитике и Data Engineering</h3></div>
+      <div class="card"><h3>Прошли теорию, но не поняли практику</h3></div>
+      <div class="card"><h3>Аналитики без уверенности в SQL</h3></div>
+    </div>
+  </section>
+
+  <!-- Чему вы научитесь -->
+  <section id="skills" class="container">
+    <h2>Чему вы научитесь</h2>
+    <ul>
+      <li>SELECT, фильтрация, сортировка, агрегаты</li>
+      <li>Подзапросы, CTE, оконные функции</li>
+      <li>Оптимизация запросов и управление схемой</li>
+      <li>Импорт/экспорт данных в MySQL и DBeaver</li>
+      <li>Готовность к собеседованиям на junior/junior+</li>
+    </ul>
+    <pre><code class="sql">SELECT u.name, COUNT(o.id) AS orders_count
+FROM users u
+JOIN orders o ON u.id = o.user_id
+WHERE o.created_at &gt;= '2025-01-01'
+GROUP BY u.name
+ORDER BY orders_count DESC;</code></pre>
+  </section>
+
   <!-- Преимущества -->
   <section id="benefits" class="container">
     <h2>Что в нём такого хорошего</h2>
