--- a/index.html
+++ b/index.html
@@ -4,131 +4,143 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>SQL для инженеров и аналитиков с нуля</title>
+  <title>Практический курс SQL для аналитиков и инженеров данных с нуля</title>
   <link rel="stylesheet" href="styles.css">
   <style>
     :root {
-      --bg-color: #F5F5F5;
-      --text-color: #333333;
-      --heading-color: #2C3E50;
-      --accent-color: #2980B9;
-      --secondary-accent: #27AE60;
+      --bg-light: #f4ecdc;
+      --bg-accent: #e0c9a6;
+      --text-dark: #2e2e2e;
+      --text-accent: #763b2d;
+      --cta-color: #763b2d;
+      --cta-hover: #a3563d;
     }
+    * { margin: 0; padding: 0; box-sizing: border-box; }
     body {
-      background-color: var(--bg-color);
-      color: var(--text-color);
       font-family: Arial, sans-serif;
+      background-color: var(--bg-light);
+      color: var(--text-dark);
       line-height: 1.6;
+    }
+    nav {
+      background: var(--bg-accent);
+      padding: 1rem;
+      display: flex;
+      justify-content: space-around;
+      position: sticky;
+      top: 0;
+      z-index: 1000;
+    }
+    nav a {
+      color: var(--text-dark);
+      text-decoration: none;
+      font-weight: bold;
     }
     .container {
       width: 90%; max-width: 1200px; margin: auto; padding: 2rem 0;
     }
     .hero {
-      background-color: var(--heading-color); color: white; padding: 4rem 0; text-align: center;
+      background-color: var(--text-accent);
+      color: white;
+      padding: 4rem 0;
+      text-align: center;
     }
-    .hero h1 { font-size: 2.5rem; margin-bottom: 1rem; }
-    .hero .subheading { font-size: 1.2rem; }
-    .icons-list {
-      list-style: none; display: flex; justify-content: space-between; margin-top: 2rem;
+    .hero h1 {
+      font-size: 2.5rem;
+      margin-bottom: 1rem;
     }
-    .icons-list li { flex: 1; text-align: center; padding: 1rem; }
-    .icons-list .icon { display: block; font-size: 2rem; margin-bottom: 0.5rem; }
-    .features { display: flex; justify-content: space-between; margin-top: 2rem; }
-    .feature-item { flex: 1; text-align: center; padding: 1rem; }
-    .cards { display: flex; gap: 1rem; margin-top: 2rem; }
-    .card {
-      flex: 1; background-color: var(--accent-color); color: white;
-      padding: 1.5rem; border-radius: 8px; text-align: center;
-    }
-    #skills ul, #program ul { list-style: disc inside; margin-top: 1rem; }
-    #skills pre {
-      background: #fff; padding: 1rem; border-radius: 4px; overflow-x: auto; color: var(--text-color);
-    }
-    .example-screenshot, .task-screenshot, .avatar {
-      width: 100%; border-radius: 8px; margin: 1rem 0; background-color: #fff; padding: 0.5rem;
-    }
-    #instructor .instructor {
-      display: flex; align-items: center; gap: 1rem; margin-top: 2rem;
-    }
-    #instructor .avatar {
-      width: 150px; border-radius: 50%; border: 4px solid var(--accent-color);
+    .hero .subheading {
+      font-size: 1.2rem;
+      max-width: 800px;
+      margin: auto;
     }
     .btn-cta {
-      display: inline-block; background: var(--accent-color); color: white;
-      padding: 1rem 2rem; text-decoration: none; border-radius: 4px; margin-top: 2rem;
-      transition: background-color 0.3s ease;
+      display: inline-block;
+      background: var(--cta-color);
+      color: white;
+      padding: 1rem 2rem;
+      text-decoration: none;
+      border-radius: 4px;
+      margin-top: 2rem;
+      transition: background 0.3s;
     }
     .btn-cta:hover {
-      background-color: var(--secondary-accent);
+      background: var(--cta-hover);
     }
-    .footer { text-align: center; padding: 2rem 0; background: #eee; color: var(--text-color); }
+    .icons-list, .features, .cards {
+      display: flex;
+      gap: 1rem;
+      flex-wrap: wrap;
+      justify-content: center;
+    }
+    .icons-list li, .feature-item, .card {
+      background: white;
+      padding: 1rem;
+      border-radius: 6px;
+      flex: 1 1 300px;
+      text-align: center;
+    }
+    img.example-screenshot, img.task-screenshot, img.avatar {
+      max-width: 400px;
+      width: 100%;
+      border-radius: 8px;
+      margin: 1rem auto;
+      display: block;
+    }
+    section h2 {
+      text-align: center;
+      color: var(--text-accent);
+      margin-bottom: 1rem;
+    }
+    .footer {
+      text-align: center;
+      padding: 2rem 0;
+      background: var(--bg-accent);
+      color: var(--text-dark);
+    }
     @media (max-width: 768px) {
-      .icons-list, .features, .cards, #instructor .instructor { flex-direction: column; }
+      nav {
+        flex-direction: column;
+        align-items: center;
+      }
     }
   </style>
 </head>
 <body>
+  <nav>
+    <a href="#about">О курсе</a>
+    <a href="#program">Программа</a>
+    <a href="#example-task">Примеры</a>
+    <a href="#instructor">Преподаватель</a>
+    <a href="#reviews">Отзывы</a>
+    <a href="#cta">Записаться</a>
+  </nav>
+
   <header class="hero">
     <div class="container">
-      <h1>Застряли на SQL-задачах без практики?</h1>
-      <p class="subheading">Практический курс с поддержкой, 280+ задач, живые разборы</p>
+      <h1>Практический курс SQL для аналитиков и инженеров данных с нуля</h1>
+      <p class="subheading">Подходит новичкам в области, легкая подача материала, более 130 задач с автопроверкой и столько же тестов, 2 специально разработанные базы данных, проект по разработке витрин данных, поддержка в закрытом телеграм канале, в каждой задаче четкое условие, подсказки, ответ и код решения.</p>
+      <a href="#cta" class="btn-cta">Записаться на курс</a>
     </div>
   </header>
 
-  <section id="pain" class="container">
+  <section id="about" class="container">
     <h2>Почему это важно</h2>
     <ul class="icons-list">
-      <li><span class="icon">🐢</span> Медленные и неэффективные запросы</li>
-      <li><span class="icon">⚠️</span> Ошибки в JOIN-ах и подзапросах</li>
-      <li><span class="icon">🚫</span> Невозможность пройти собеседование на junior-позицию</li>
+      <li>🐢 Медленные и неэффективные запросы</li>
+      <li>⚠️ Ошибки в JOIN-ах и подзапросах</li>
+      <li>🚫 Невозможность пройти собеседование на junior-позицию</li>
     </ul>
   </section>
 
   <section id="solution" class="container">
-    <h2>Наше решение</h2>
+    <h2>Что вы получите</h2>
     <div class="features">
-      <div class="feature-item"><p>280+ практических задач и тестов</p></div>
-      <div class="feature-item"><p>Проектная работа и живая поддержка в Telegram</p></div>
-      <div class="feature-item"><p>Специально созданные базы данных</p></div>
+      <div class="feature-item">130+ задач и столько же тестов</div>
+      <div class="feature-item">Проект по витринам данных</div>
+      <div class="feature-item">Поддержка в Telegram</div>
+      <div class="feature-item">Сертификат Stepik</div>
     </div>
-  </section>
-
-  <section id="audience" class="container">
-    <h2>Для кого этот курс</h2>
-    <div class="cards">
-      <div class="card"><h3>Новички в аналитике и Data Engineering</h3></div>
-      <div class="card"><h3>Прошли теорию, но не поняли практику</h3></div>
-      <div class="card"><h3>Аналитики без уверенности в SQL</h3></div>
-    </div>
-  </section>
-
-  <section id="skills" class="container">
-    <h2>Чему вы научитесь</h2>
-    <ul>
-      <li>SELECT, фильтрация, сортировка, агрегаты</li>
-      <li>Подзапросы, CTE, оконные функции</li>
-      <li>Оптимизация запросов и управление схемой</li>
-      <li>Импорт/экспорт данных в MySQL и DBeaver</li>
-      <li>Готовность к собеседованиям на junior/junior+</li>
-    </ul>
-    <pre><code class="sql">SELECT u.name, COUNT(o.id) AS orders_count
-FROM users u
-JOIN orders o ON u.id = o.user_id
-WHERE o.created_at >= '2025-01-01'
-GROUP BY u.name
-ORDER BY orders_count DESC;</code></pre>
-  </section>
-
-  <section id="theory-example" class="container">
-    <h2>Как выглядит теория на практике</h2>
-    <img src="лендинг2.png" alt="Пример теории" class="example-screenshot">
-    <p>Каждый пример сопровождается SQL-запросом и результатом, чтобы вы могли понять логику выполнения.</p>
-  </section>
-
-  <section id="example-task" class="container">
-    <h2>Как устроена каждая задача</h2>
-    <img src="лендинг1.png" alt="Пример задачи" class="task-screenshot">
-    <p>У каждой задачи есть: условие, схема, подсказка, готовый ответ и SQL-решение. Не нужно гадать!</p>
   </section>
 
   <section id="program" class="container">
@@ -143,17 +155,35 @@ ORDER BY orders_count DESC;</code></pre>
     </ul>
   </section>
 
+  <section id="example-task" class="container">
+    <h2>Как устроены задачи</h2>
+    <img src="лендинг2.png" alt="Пример теории" class="example-screenshot">
+    <img src="лендинг1.png" alt="Пример задачи" class="task-screenshot">
+  </section>
+
   <section id="instructor" class="container">
-    <h2>Преподаватель</h2>
-    <div class="instructor">
-      <img src="avatar.png" alt="Кузьмин Дмитрий" class="avatar">
-      <p><strong>Дмитрий Кузьмин</strong><br>Data Engineer с опытом продакшен-проектов и подготовки к собеседованиям. Помогаю на каждом этапе.</p>
+    <h2>О преподавателе</h2>
+    <img src="avatar.png" alt="Дмитрий Кузьмин" class="avatar">
+    <p style="text-align: center; max-width: 600px; margin: 0 auto;">
+      Привет! Меня зовут Дмитрий, я прошёл путь от инженера-робототехника до Data Engineer. Сейчас работаю в крупнейшем финтехе страны и обучаю SQL через практику. Объясняю просто, даю обратную связь, помогаю не сдаваться и идти до конца.
+    </p>
+  </section>
+
+  <section id="reviews" class="container">
+    <h2>Отзывы студентов</h2>
+    <div class="features">
+      <div class="feature-item">Оставьте место под реальные цитаты — «Очень понятно и практично!»</div>
+      <div class="feature-item">«Теперь не боюсь SQL-собесов, спасибо!»</div>
     </div>
   </section>
 
+  <section id="cta" class="container" style="text-align: center;">
+    <h2>Готовы начать обучение?</h2>
+    <a href="https://stepik.org" class="btn-cta">Перейти на платформу</a>
+  </section>
+
   <footer class="footer">
-    <a href="https://stepik.org" class="btn-cta">Пойти на курс</a>
-    <p>Сертификат Stepik. Гарантия качества.</p>
+    <p>© 2025 SQL. С любовью к Data.</p>
   </footer>
 </body>
 </html>
